Updates from Overleaf

--- a/01_frontmatter/acronyms.tex
+++ b/01_frontmatter/acronyms.tex
@@ -6,6 +6,7 @@
 \begin{acronym}[PRISMA]  % Längste Abkürzung für Spaltenbreite
     \acro{AHO}{Ausschuss der Verbände und Kammern der Ingenieure und Architekten für die Honorarordnung}
     \acro{BIM}{Building Information Modeling}
+    \acro{CBA}{Choose by Advantage}
     \acro{CoS}{Conditions of Satisfaction}
     \acro{GLCI}{German Lean Construction Institute}
     \acro{IPA}{Integrierte Projektabwicklung}
