--- a/02_mainmatter/ch5_Transfer.tex
+++ b/02_mainmatter/ch5_Transfer.tex
@@ -1,19 +1,23 @@
 \chapter{Analyse systemischer Spannungsfelder und Implementierungsbarrieren}
 \label{ch:transfer}
 
-Im vorangegangenen Kapitel wurde das Prozessmodell des Target Value Design (TVD) für den deutschen Kontext entwickelt. Bereits bei der Betrachtung der einzelnen Phasen hat sich gezeigt, dass eine direkte Übertragung der Lean-Methodik auf die hiesige Baupraxis schwierig ist. Die in Kapitel 4 beschriebenen \enquote{Sollbruchstellen} sind keine Einzelfälle, sondern weisen auf grundsätzliche Unterschiede in den Systemen hin.
+Kapitel 4 hat gezeigt, dass sich das Prozessmodell des Target Value Design (TVD) nicht ohne Weiteres auf Deutschland übertragen lässt. Die identifizierten Hürden sind keine Einzelfälle, sondern das Ergebnis eines Systemkonflikts.
+Es prallen zwei Denkweisen aufeinander: Auf der einen Seite steht der TVD-Ansatz, der auf Flexibilität, Zusammenarbeit und Wahrscheinlichkeiten setzt. Auf der anderen Seite steht das deutsche System aus VOB, HOAI und Haushaltsrecht, das auf festen Preisen, strikter Trennung und detaillierten Vorgaben beharrt.
 
-Der Konflikt besteht im Kern zwischen zwei unterschiedlichen Denkweisen: Auf der einen Seite steht der TVD-Ansatz, der auf Wahrscheinlichkeiten, Zusammenarbeit und funktionalen Zielen basiert. Auf der anderen Seite steht das etablierte deutsche System aus VOB, HOAI und öffentlichem Haushaltsrecht, das feste Preise, eine strikte Trennung der Phasen und detaillierte Vorgaben verlangt.
-
-Um die Vielzahl der gefundenen Hürden – vom fehlenden wirtschaftlichen Anreiz in Phase 0 bis zur Haftungsproblematik in Phase 3 – systematisch adressieren zu können, werden sie im Folgenden thematisch gebündelt. Eine reine Auflistung der 15 Punkte würde die Zusammenhänge vernachlässigen. Stattdessen werden die Hürden in drei große Spanungsfelder (Clustern) zusammengefasst, welche die Hauptprobleme bei der Einführung abbilden:
+Um diese strukturellen Probleme nicht als unübersichtliche Liste von Einzelpunkten abzuarbeiten, werden sie im Folgenden in drei thematische Spannungsfelder (\enquote{Dilemmata}) gebündelt:
 
 \begin{enumerate}
-    \item \textbf{Das Beschaffungs-Dilemma (Marktzugang und Recht):} Wie lassen sich kooperative Teams bilden, wenn das Vergaberecht primär auf Wettbewerb und Preis ausgerichtet ist? (Diskussion der Punkte aus Phase 1).
-    \item \textbf{Das Wert-Dilemma (Methodik und Steuerung):} Worauf wird optimiert, wenn klassische Werttreiber (wie Rendite) fehlen und Normen den Spielraum einschränken? (Diskussion der Punkte aus Phase 0 und 2).
-    \item \textbf{Das Struktur-Dilemma (Anreize und Kultur):} Wie können Lernkurven und Optimierungen entstehen, wenn die aktuellen Honorar- und Haftungsregeln dies eher bestrafen? (Diskussion der Punkte aus Phase 2 und 3).
+    \item \textbf{Das Beschaffungs-Dilemma (Marktzugang und Recht):}\\
+    Wie lassen sich kooperative Teams frühzeitig bilden, wenn das Vergaberecht primär auf Preiswettbewerb statt auf Kompetenz ausgerichtet ist? (Fokus auf Phase 1).
+
+    \item \textbf{Das Wert-Dilemma (Steuerung und Zielsystem):}\\
+    Worauf wird optimiert, wenn es keinen ökonomischen ROI gibt und Budgets für Bau und Betrieb getrennt sind? Hier geht es um die Gefahr, dass kurzfristige Kostenoptimierung strukturell gegenüber langfristigen Qualitäts- und Nutzungszielen priorisiert wird (Fokus auf Phase 0 und 2).
+
+    \item \textbf{Das Struktur-Dilemma (Ordnungsrahmen und Prozess):}\\
+    Wo liegen die Grenzen der Machbarkeit? Dieses Cluster diskutiert Hürden, die selbst durch moderne Verträge (wie IPA) nicht gelöst werden können, weil sie im starren Genehmigungs- und Baurecht verankert sind (Fokus auf Phase 2 und 3).
 \end{enumerate}
 
-Ziel dieses Kapitels ist es, innerhalb dieser drei Bereiche zu diskutieren, inwieweit neue Ansätze (wie die Integrierte Projektabwicklung/IPA) diese Barrieren bereits senken können und wo auch mit neuen Verträgen noch offene Fragen bleiben.
+Ziel dieses Kapitels ist eine differenzierte Analyse: Welche Barrieren lassen sich durch neue Vertragsmodelle bereits senken und an welchen Stellen steht der gesetzliche Ordnungsrahmen einer echten TVD-Umsetzung weiterhin im Weg?
 
 \section{Cluster 1: Das Beschaffungs-Dilemma}
 \label{sec:cluster1}
@@ -225,94 +229,116 @@ Für das TVD-Team entsteht daraus ein struktureller Zielkonflikt. Investitionen 
 \subsection{Lösungsansatz: Die Operationalisierung des Wertes (Value Management)}
 \label{sec:5.2.4}
 
-Die vorangegangene Analyse legt nahe, dass die Anwendung von Target Value Design im öffentlichen Sektor auf eine strukturelle Asymmetrie trifft: Während die Variable \enquote{Kosten} (Euro) exakt definiert ist, bleibt die Variable \enquote{Wert} (Nutzen) häufig interpretationsfähig. Es fehlt die natürliche Markt-Regulierung durch den ROI (siehe Abschnitt \ref{sec:5.2.1}) sowie eine ganzheitliche Kostenklammer über den Lebenszyklus (siehe Abschnitt \ref{sec:5.2.3}).
-Um das beschriebene Wert-Dilemma aufzulösen, bedarf es daher keiner singulären Maßnahme, sondern eines methodischen Baukastens, der an den identifizierten Bruchstellen ansetzt.
+Zwar sind die folgenden Herausforderungen typisch für jede Anwendung von Target Value Design, doch im öffentlichen Sektor wiegen sie deutlich schwerer. Aus bloßen methodischen Hürden werden hier oft feste strukturelle Barrieren. 
+Die Ursache liegt im speziellen System der öffentlichen Hand: Budgets wirken in der Praxis oft weniger verbindlich (\enquote{weiche Budgetgrenzen}) und wirtschaftliche Anreize greifen nicht direkt, da Investitionskosten und späterer Nutzen organisatorisch voneinander entkoppelt sind. \autocite[vgl.]{kozuch_nachhaltigkeit_2024}\, \autocite[vgl.]{zimina_target_2012}
 
 \minisec{Hierarchische Wert-Strukturierung}
-Ein möglicher Ansatz, um das Vakuum des fehlenden Business Case zu füllen, besteht in der methodischen \textbf{Härtung der Wertziele}. Miron et al. (2015) schlagen hierfür vor, den Wertbegriff explizit zu strukturieren. Anstatt abstrakter Projektziele (\enquote{Hohe Nutzerzufriedenheit}) müssten konkrete **Wert-Attribute** (Value Attributes) definiert werden, die messbar oder zumindest eindeutig bewertbar sind (z.\,B. Nachhallzeiten, Reinigungsintervalle oder Flexibilitätsgrade).
-Für den deutschen Kontext wäre hierbei eine stärkere Integration der **Nutzwertanalyse** in den TVD-Prozess denkbar. Neben den \enquote{Target Cost} (Zielkosten) könnte ein \enquote{Target Value Score} (Ziel-Nutzwert) als korrespondierende Steuerungsgröße etabliert werden. Dies würde dem Projektteam ermöglichen, qualitative Anforderungen verbindlicher gegen Kosteneinsparungen abzuwägen \autocite[vgl.]{miron_target_2015}.
+Ein möglicher Ansatz, um das Vakuum des fehlenden Business Case zu füllen, besteht in der methodischen \enquote{Härtung der Wertziele}. Miron et al. (2015) schlagen hierfür vor, den Wertbegriff explizit zu strukturieren. Anstatt abstrakter Projektziele (\enquote{Hohe Nutzerzufriedenheit}) müssten konkrete Wert-Attribute (Value Attributes) definiert werden, die messbar oder zumindest eindeutig bewertbar sind (z.\,B. Nachhallzeiten, Reinigungsintervalle oder Flexibilitätsgrade).
+Für den deutschen Kontext wäre hierbei eine stärkere Integration der Nutzwertanalyse in den TVD-Prozess denkbar. Neben den \enquote{Target Cost} (Zielkosten) könnte ein \enquote{Target Value Score} (Ziel-Nutzwert) als korrespondierende Steuerungsgröße etabliert werden. Dies würde dem Projektteam ermöglichen, qualitative Anforderungen verbindlicher gegen Kosteneinsparungen abzuwägen. \autocite[vgl.]{miron_target_2015}
 
-\minisec{Erweiterte Entscheidungsmethodik (CBA)}
-Um der Falle der Kostenzentrierung (\ref{sec:5.2.2}) entgegenzuwirken, erscheint zudem eine Anpassung der Entscheidungslogik im Designprozess sinnvoll. Statt Planungsalternativen primär anhand der Investitionskosten zu vergleichen, könnten Verfahren wie **Choosing by Advantages (CBA)** herangezogen werden.
-Hierbei wird eine kostenintensivere Lösung (z.\,B. eine langlebigere Fassade) nicht zwangsläufig verworfen, sondern ihr \enquote{Vorteil} wird explizit ins Verhältnis zu den Mehrkosten gesetzt. Dies zwingt den öffentlichen Auftraggeber, seine Präferenzen offenzulegen, und verhindert das automatische \enquote{Descoping} von Qualität zugunsten kurzfristiger Einsparungen.
+\minisec{Reaktivierung der Entscheidungslogik (CBA)}
+Um der Falle der Kostenzentrierung (vgl. Abschnitt \ref{sec:5.2.2}) entgegenzuwirken, ist weniger die Einführung neuer Methoden erforderlich als vielmehr die konsequente Anwendung der wertbasierten Entscheidungslogik, die dem Target Value Design bereits inhärent ist.
+Insbesondere Verfahren wie\acf{CBA}, die im theoretischen TVD-Ansatz eine zentrale Rolle spielen, werden in der Praxis öffentlicher Bauprojekte häufig nur eingeschränkt oder informell genutzt.
+Anstatt Planungsalternativen primär anhand der Investitionskosten zu vergleichen, erlaubt CBA eine explizite Gegenüberstellung von Vorteilen und Mehrkosten. Dadurch wird der öffentliche Auftraggeber gezwungen, seine Präferenzen transparent zu machen, und es wird verhindert, dass qualitative Aspekte reflexartig zugunsten kurzfristiger Kosteneinsparungen reduziert werden \autocite[vgl.]{miron_target_2015}.
 
 \minisec{Integration von Lebenszyklus-Zielen (Sustainable TVD)}
 Zur Überbrückung der TOTEX-Lücke (\ref{sec:5.2.3}) ist eine Erweiterung der Zielgrößen notwendig. Russell-Smith et al. (2015) sowie Olender und Rosen (2023) plädieren für ein **Sustainable Target Value Design**, bei dem neben dem Kostenziel ein verbindliches Budget für Lebenszyklusfaktoren (z.\,B. Energiebedarf oder CO\textsubscript{2}-Äquivalente) festgelegt wird.
 Dass dies praktisch umsetzbar ist, belegen Silveira und Alves (2018) anhand von Fallstudien: Sie konnten nachweisen, dass TVD-Praktiken signifikant dazu beitragen, strenge Nachhaltigkeitsstandards kostenneutral umzusetzen, sofern sich das Team von der reinen Betrachtung der Anschaffungskosten (\enquote{First Cost}) löst und kollaborative Methoden wie das \textit{Set-Based Design} nutzt.
-Für die deutsche Verwaltung würde dies bedeuten, die Wirtschaftlichkeitsuntersuchung nicht als statisches Dokument, sondern als dynamische Steuerungsgröße in den TVD-Prozess zu integrieren \autocite[vgl.]{russell_smith_sustainable_2015, olender_rosen_2023, silveira_tvd_sustainable_2018}.
+Für die deutsche Verwaltung würde dies bedeuten, die Wirtschaftlichkeitsuntersuchung nicht als statisches Dokument, sondern als dynamische Steuerungsgröße in den TVD-Prozess zu integrieren. \autocite[vgl.]{russell_smith_sustainable_2015}\, \autocite[vgl.]{olender_rosen_2023}\,\autocite[cgl.]{silveira_tvd_sustainable_2018}
 
 \clearpage
 
+\section{Einordnung: Entschärfte vs. persistente Strukturprobleme}
+\label{sec:5.3_intro}
 
-\section{Cluster 3: Das Struktur-Dilemma (Anreize und Kultur)}
-\label{sec:cluster3}
+Die Diskussion um Hemmnisse von Target Value Design in Deutschland wird häufig von der Kritik an fragmentierten Vertragsstrukturen dominiert. Die klassische Trennung von Planung und Ausführung sowie die antagonistische Anreizlogik von Einheitspreisverträgen (VOB/B) gelten zurecht als fundamentale Barrieren für die kollaborative TVD-Methodik.
+Diese Betrachtung greift jedoch zu kurz, da sie strukturelle Defizite (die durch neue Vertragsmodelle lösbar sind) mit systemischen Grenzen (die im Ordnungsrahmen verankert sind) vermischt.
 
-Selbst wenn es gelingt, ein kompetentes Team vertraglich zu binden (Cluster 1) und wertorientierte Ziele zu definieren (Cluster 2), trifft die operative Umsetzung des Target Value Design auf den Widerstand der gewachsenen Branchenstruktur. Das dritte Diskussions-Cluster widmet sich daher den \enquote{weichen} Faktoren der Zusammenarbeit – Anreizsystemen, Haftungsregimen und der Projektkultur – die durch \enquote{harte} gesetzliche Rahmenbedingungen (HOAI, VOB) zementiert werden.
+Mit der zunehmenden Etablierung der Integrierten Projektabwicklung (IPA) im öffentlichen Sektor steht mittlerweile ein vertragliches Instrumentarium zur Verfügung, das viele der klassischen \enquote{TVD-Killer} – etwa die Haftungsproblematik oder das Honorarparadoxon – systematisch adressiert. Dieses Cluster fokussiert daher nicht auf die generellen Inkompatibilitäten des Standard-VOB-Vertrags. Stattdessen analysiert es jene persistenten Spannungsfelder, die selbst bei Einsatz eines idealen Mehrparteienvertrags bestehen bleiben.
+Es wird die These vertreten, dass die verbleibende Fragilität von TVD in Deutschland weniger in der Vertragsgestaltung begründet liegt, sondern in der mangelnden Synchronisation zwischen der iterativen Projektmethodik und der linearen Logik des öffentlichen Genehmigungs- und Haushaltsrechts.
 
-Die Analyse zeigt, dass das deutsche Bauwesen als \enquote{adversariales System} (gegensätzlich) konstruiert ist. Die Akteure optimieren ihren eigenen Vorteil oft auf Kosten des Gesamtprojekts. TVD erfordert hingegen ein \enquote{kollaboratives System}. Dieser Kulturwandel scheitert in der Praxis nicht am Unwillen der Beteiligten, sondern an systemischen Fehlanreizen: Wer sich im aktuellen deutschen Rechtsrahmen kooperativ verhält, geht oft ein unkalkulierbares ökonomisches oder juristisches Risiko ein.
-
-\subsection{Das Honorar-Paradoxon: Ökonomische Bestrafung von Effizienz}
+\subsection{TVD als implizit IPA-abhängige Methodik}
 \label{sec:5.3.1}
 
-Ein zentraler Pfeiler des TVD ist das Prinzip des \enquote{Frontloading}: Durch einen erhöhten Planungsaufwand in frühen Phasen sollen teure Änderungen in der Ausführung vermieden und die Baukosten insgesamt gesenkt werden. Betrachtet man die Honorarstruktur der HOAI (Honorarordnung für Architekten und Ingenieure), offenbart sich eine diametrale Fehlsteuerung, die in der Literatur als \enquote{Fee Paradox} bezeichnet wird.
+In der Literatur werden häufig die Honorarordnung für Architekten und Ingenieure (HOAI) und das haftungsrechtliche Trennungsprinzip als Haupthindernisse für TVD angeführt. Diese Einschätzung ist im Kontext konventioneller Vergaben korrekt, verliert jedoch im Kontext partnerschaftlicher Modelle an Schärfe. Vielmehr muss konstatiert werden: Target Value Design ist in der deutschen Praxis faktisch an die Logik der Integrierten Projektabwicklung gekoppelt.
 
-\minisec{Die Kopplung an die anrechenbaren Kosten}
-Gemäß § 33 HOAI bemisst sich das Honorar der Planer maßgeblich nach den \enquote{anrechenbaren Kosten} des Bauwerks. Diese Mechanik war ursprünglich gedacht, um Planer vor Preisdumping zu schützen, wirkt im TVD-Kontext jedoch kontraproduktiv.
-Gelingt es einem Architekten durch kreatives TVD (z.\,B. intelligente Rasterung, Materialsubstitution), die Baukosten von 10 Mio. € auf 8 Mio. € zu senken, sinkt seine eigene Vergütungsgrundlage proportional. Er \enquote{erkauft} den Erfolg des Bauherrn mit einem eigenen Umsatzverlust.
+\minisec{Die Auflösung des Honorarparadoxons}
+Das oft zitierte \enquote{Honorarparadoxon} – dass Planer in der HOAI für aufwendige Kostenoptimierungen bestraft werden, da ihr Honorar an die (sinkenden) Baukosten gekoppelt ist – stellt in einem Mehrparteienvertrag (IPA) kein Hindernis mehr dar. In solchen Modellen werden Planungsleistungen üblicherweise \enquote{at cost} (Selbstkosten) erstattet, zuzüglich eines Gewinnaufschlags, der an den Gesamterfolg des Projekts (Target Cost) gebunden ist. Die HOAI wirkt hier nur noch als preisrechtlicher Rahmen für die Mindestsätze, nicht mehr als Fehlanreizsystem. Die ökonomische Motivation des Planers wird durch das IPA-Modell harmonisiert: Er verdient mehr, wenn das Projekt günstiger wird.
 
-\minisec{Das Scheren-Problem (Aufwand vs. Ertrag)}
-Gleichzeitig steigt im TVD der Aufwand für den Planer massiv an: Die Teilnahme an wöchentlichen Cluster-Meetings, die iterative Erstellung von Varianten und die Koordination mit ausführenden Firmen erfordern deutlich mehr Stunden als ein klassischer linearer Entwurf.
-Wie Abbildung \ref{fig:honorar_paradoxon} verdeutlicht, öffnet sich eine Schere: Während der Aufwand steigt (durch TVD-Prozesse), sinkt der Ertrag (durch Kostenreduktion). Ein rational handelnder Planer hat im HOAI-System somit keinen extrinsischen Anreiz, TVD ernsthaft zu betreiben. Ohne alternative Vergütungsmodelle (z.\,B. \enquote{Cost+Fee} mit Bonus-Malus-Regelung), die im öffentlichen Recht schwer durchsetzbar sind, bleibt TVD eine idealistische Forderung, die an der ökonomischen Realität der Planungsbüros scheitert \autocite[vgl.]{kalusche_projektmanagement_2020}.
+\minisec{Funktionale Entschärfung der Haftung}
+Ebenso verhält es sich mit der Schnittstellenproblematik. In der klassischen Einzelvergabe führt die iterative Zusammenarbeit (z.\,B. frühe Einbindung von Bauwissen in die Planung) zu diffusen Haftungsrisiken. Im IPA-Kontext wird dieses Risiko durch die \enquote{No-Blame}-Kultur und den vertraglichen Haftungsverzicht (außer bei Vorsatz/grober Fahrlässigkeit) funktional neutralisiert. Risiken werden nicht individuell, sondern kollektiv über den gemeinsamen Risikotopf (Risk Pool) getragen.
 
-\begin{figure}[ht]
-    \centering
-    \begin{tikzpicture}[scale=1.0, >=Stealth]
-        % Achsen
-        \draw[->] (0,0) -- (8,0) node[right] {Projekterfolg (Kostensenkung)};
-        \draw[->] (0,0) -- (0,5) node[above] {Finanzieller Ertrag / Aufwand};
+\minisec{Strukturelle Voraussetzung statt Schwäche}
+Daraus folgt eine wichtige Neubewertung: Die Abhängigkeit von komplexen Vertragsmodellen ist keine \enquote{Schwäche} von TVD, sondern eine strukturelle Voraussetzung. Viele als \enquote{TVD-Probleme} diskutierte Aspekte sind in Wahrheit Probleme einer unvollständigen Anwendung ohne den passenden vertraglichen Container. Für die weitere Analyse dieses Clusters werden diese vertraglich lösbaren Themen daher als \enquote{entschärft} betrachtet. Der Fokus richtet sich nun auf den harten Kern der Probleme, der jenseits der Vertragsfreiheit der Parteien liegt: die regulatorische Prozesslogik.
 
-        % Kurve 1: TVD-Aufwand (steigt)
-        \draw[red, thick] (0,1.5) -- (7,4.5) node[right] {Planungsaufwand (TVD)};
-        
-        % Kurve 2: HOAI-Honorar (fällt)
-        \draw[blue, thick] (0,4) -- (7,1) node[right] {Honorar (HOAI-Basis)};
-
-        % Fläche dazwischen (Verlustzone)
-        \fill[gray!20] (2.5, 2.5) -- (7, 4.5) -- (7, 1) -- cycle;
-        \node at (5.5, 2.8) [align=center, font=\small\bfseries] {Ökonomische\\Fehlanreiz-Zone};
-
-        % Beschriftung Startpunkt
-        \node[align=center, below] at (0,-0.2) {Start Budget};
-        \node[align=center, below] at (7,-0.2) {Ziel erreicht\\(-20\% Kosten)};
-
-    \end{tikzpicture}
-    \caption{Das Honorar-Paradoxon: Divergenz von Aufwand und Vergütung bei Kostenoptimierung nach HOAI}
-    \label{fig:honorar_paradoxon}
-\end{figure}
-
-\subsection{Die Haftungsmauer: Individualschuld vs. Kollektiventscheidung}
+\subsection{Persistentes Kernproblem: Phasentrennung und fehlendes Fast-Tracking}
 \label{sec:5.3.2}
 
-Ein weiteres strukturelles Hindernis liegt im deutschen Haftungsrecht. TVD propagiert eine \enquote{No-Blame}-Kultur, in der Entscheidungen im \textit{Big Room} gemeinsam getroffen werden (\enquote{Best for Project}). Kommt es jedoch zu einem Bauschaden, kennt das BGB und die VOB fast ausschließlich die Individualhaftung.
+Während vertragliche Barrieren durch Modelle der Integrierten Projektabwicklung (IPA) weitgehend neutralisiert werden können, stößt die Anwendung von Target Value Design in Deutschland an eine härtere, externe Systemgrenze: die regulatorisch verankerte Trennung von Planung, Genehmigung und Ausführung. Dieses Spannungsfeld bleibt auch im optimalen Vertragsumfeld bestehen, da es nicht dem Privatrecht (Vertrag), sondern dem öffentlichen Baurecht (Ordnungsrahmen) entspringt.
 
-\minisec{Versicherungsrechtliche Inkompatibilität}
-Berufshaftpflichtversicherungen decken Schäden nur dann ab, wenn ein klares Verschulden des Versicherungsnehmers nachweisbar ist. In einem integrierten TVD-Team, in dem der Rohbauer dem Architekten in die Statik redet und der Architekt dem TGA-Planer in die Dimensionierung, verschwimmen die Verantwortlichkeiten.
-Im Schadensfall führt dies zu massiven Regressstreitigkeiten (\enquote{Wer hat die Entscheidung im Meeting protokolliert?}). Aus Angst vor diesem Szenario neigen deutsche Akteure dazu, trotz Lippenbekenntnissen zur Kooperation, im Hintergrund eine \enquote{Cover Your Ass}-Strategie zu fahren. Entscheidungen werden verzögert, Bedenkenanmeldungen präventiv verschickt und Protokolle juristisch abgesichert.
-Diese \enquote{Defensiv-Planung} lähmt die Agilität des TVD-Prozesses. Solange keine projektbezogenen Mehrparteien-Versicherungen (Project Insurance) etabliert sind, die das gesamte Team als Einheit versichern, bleibt die Angst vor der persönlichen Haftung der stärkste Gegner der offenen Kooperation \autocite[vgl.]{breyer_partnerschaftliche_2023}.
+Während die Phasentrennung in den vorangegangenen Clustern primär als organisations- und vergaberechtliches Problem der frühen Einbindung diskutiert wurde, wird sie im Folgenden bewusst auf einer anderen Ebene betrachtet: als systemische Inkompatibilität zwischen der iterativen Logik von Target Value Design und der fixierungsorientierten Logik des öffentlichen Genehmigungsrechts.
 
-\subsection{Diskontinuität durch Phasentrennung und Schnittstellen}
+\minisec{Kollision der Logiken: Iteration vs. Fixierung}
+Der methodische Kern von TVD basiert auf Prinzipien wie dem \textit{Set-Based Design} und dem \textit{Concurrent Engineering}. Entscheidungen sollen so lange wie möglich offengehalten werden (\enquote{Last Responsible Moment}), um Optimierungspotenziale zu wahren, während Planung und Ausführung sich zeitlich überlappen.
+Diese Logik steht in fundamentalem Widerspruch zur deutschen Genehmigungs-Systematik. Das Baurecht setzt für die Erteilung einer Baugenehmigung eine \enquote{genehmigungsreife}, also in wesentlichen Teilen fixierte Planung voraus.
+
+Das deutsche System erzwingt somit eine frühzeitige Festlegung (Design Freeze) zu einem Zeitpunkt, an dem TVD eigentlich noch Variabilität fordert. Auch ein IPA-Vertrag kann diese externe Restriktion nicht aufheben: Das Bauamt genehmigt keine \enquote{Lösungsräume}, sondern nur definierte Pläne.
+
+\minisec{Die Grenzen des Fast-Trackings}
+Besonders deutlich wird dies beim Thema \textit{Fast-Tracking} (Parallelisierung von Planen und Bauen). In anglo-amerikanischen Systemen, aus denen TVD stammt, ist es üblich, mit dem Rohbau zu beginnen, während der Ausbau noch geplant wird. In Deutschland ist dies zwar technisch möglich, aber prozessual risikobehaftet. Die Notwendigkeit einer abgeschlossenen Genehmigungsplanung vor Baubeginn (oder zumindest vor Beginn relevanter Teilabschnitte) wirkt als natürliche Bremse für die radikale Parallelisierung, die TVD zur Kosteneinhaltung oft benötigt.
+
+\subsection{Teilbaugenehmigungen als unzureichender Ersatz für echte Parallelisierung}
 \label{sec:5.3.3}
 
-Der ideale TVD-Prozess ist ein \textit{Continuous Flow}: Das Wissen wächst stetig, der Detaillierungsgrad nimmt zu. Das deutsche Leistungsphasenmodell (LPH 1--9) organisiert das Bauen hingegen als \enquote{Wasserfall-Modell} mit harten Zäsuren. Besonders die Schnittstelle zwischen Genehmigungsplanung (LPH 4) und Ausführungsplanung (LPH 5) wirkt als Bruchstelle.
+Um das beschriebene Dilemma zu umgehen, greifen Projekte in der Praxis häufig auf das Instrument der Teilbaugenehmigung (§\,74 Musterbauordnung) zurück. Dieses Vorgehen wird oft als Äquivalent zum Fast-Tracking missverstanden, stellt jedoch bei genauerer Analyse nur einen bürokratischen \enquote{Workaround} dar, der die methodischen Stärken von TVD schwächen kann.
 
-Oftmals endet mit der LPH 4 die Beauftragung des Entwurfsarchitekten oder sie wird aus Kostengründen an ein anderes Büro oder einen Generalunternehmer übergeben. Im TVD-Kontext ist dies fatal: Das gesamte implizite Wissen darüber, \textit{warum} bestimmte Entscheidungen in der Zielkostenphase so getroffen wurden (die \enquote{Design Intent}), geht beim Übergabeprozess verloren. Der neue Akteur beginnt oft, den Entwurf zu \enquote{optimieren} (d.h. zu verbilligen), ohne die funktionalen Hintergründe zu kennen. Die im TVD mühsam erarbeitete Wert-Balance wird durch die fragmentierte Prozesskette wieder zerstört.
+\minisec{Erhöhung der Komplexität}
+Zwar ermöglichen Teilbaugenehmigungen einen früheren Baubeginn (z.\,B. für Baugrube und Gründung). Sie erkaufen diesen Zeitgewinn jedoch durch eine Fragmentierung des Genehmigungsprozesses und eine Erhöhung der Schnittstellenkomplexität. Anstatt den Prozess zu verschlanken (Lean-Gedanke), wird der administrative Aufwand erhöht.
 
-\subsection{Fehlendes Organizational Learning und Datenverlust}
+\minisec{Einschränkung des Lösungsraums}
+Schwerwiegender ist der Einfluss auf die TVD-Methodik: Eine Teilbaugenehmigung zwingt das Team, bestimmte Parameter (z.\,B. Statik, Gebäudekubatur) zu einem sehr frühen Zeitpunkt verbindlich einzureichen und damit einzufrieren. Dies unterläuft den Ansatz des \textit{Set-Based Design}. Das Team muss Entscheidungen treffen, um den Verwaltungsakt zu bedienen, nicht weil es der \enquote{Last Responsible Moment} für den Projekterfolg erfordert. Faktisch führt der bürokratische Zwang zur Teilung des Genehmigungsprozesses dazu, dass Flexibilität – die wichtigste Ressource im Target Value Design – vorzeitig aufgegeben wird.
+
+
+\subsection{Einordnung: Grenze der Vertragslogik}
 \label{sec:5.3.4}
 
-Abschließend verhindert die Struktur der deutschen Bauwirtschaft die für TVD essenzielle Lernkurve. Ouma et al. (2025) definieren \enquote{Organizational Learning} als die höchste Reifegradstufe: Projektdaten fließen zurück in eine Datenbank, um die Zielkostenschätzung des nächsten Projekts zu präzisieren.
+Die Analyse dieses Clusters führt zu einer differenzierten Bewertung der Machbarkeit von Target Value Design im öffentlichen Sektor. Die nahe liegende Annahme, dass die Einführung Integrierter Projektabwicklung (IPA) automatisch alle Strukturdefizite beseitigt, muss relativiert werden.
 
-Da Bauprojekte in Deutschland als \enquote{Unikate} organisiert sind und Teams sich nach Abschluss (§ 12 VOB/B Abnahme) sofort auflösen (\textit{Ad-hoc-Teams}), findet dieser Rückfluss nicht statt. Es gibt keinen kommerziellen Anreiz für einen Bauunternehmer, seine echten Kalkulationsdaten (\enquote{Urkalkulation}) mit dem Bauherrn zu teilen, da diese sein Betriebsgeheimnis und seinen Wettbewerbsvorteil für die nächste Ausschreibung darstellen.
-Das System bleibt somit \enquote{gedächtnislos}. Jedes TVD-Projekt beginnt wieder bei Null, anstatt auf validierten Kennwerten aufzubauen. Ohne diesen Datenpool bleibt die Zielkostenfindung (Phase 0) ein Ratespiel, was die methodische Integrität des gesamten Ansatzes schwächt.
+Zwar ist IPA ein notwendiger Enabler, um die internen Anreizsysteme des Projektteams (Vergütung, Haftung, Kooperation) auf die TVD-Logik auszurichten. Es ist jedoch kein hinreichender Enabler, um die externen Rahmenbedingungen zu flexibilisieren. Ein Mehrparteienvertrag ist ein privatrechtliches Instrument, das lediglich das Binnenverhältnis der Akteure regelt. Er besitzt keine juristische Kraft, um regulatorische Vorgaben des öffentlichen Baurechts – wie die Forderung nach einer fixierten Genehmigungsplanung – außer Kraft zu setzen.
 
-\clearpage
+Die verbleibende Barriere für eine konsequente Anwendung von TVD liegt somit nicht mehr in der Organisation der Projektbeteiligten, sondern im starren Ordnungsrahmen, der iterative Planungsprozesse institutionell benachteiligt. Solange das Genehmigungsrecht Linearität erzwingt, während die Projektmethodik auf Agilität setzt, bleibt TVD auch im IPA-Modell ein Kompromiss.
+
+\subsection{Fazit Cluster 3: Von der Struktur- zur Systemfrage}
+\label{sec:5.3.5}
+
+Zusammenfassend zeigt sich, dass Target Value Design in Deutschland nicht primär an \enquote{weichen} Faktoren wie Kultur oder fehlendem Kooperationswillen scheitert, sondern an harten strukturellen Inkompatibilitäten.
+Während klassische Defizite wie die Honorar- und Haftungsproblematik durch neue Vertragsmodelle (IPA) wirksam neutralisiert werden können, bleibt ein zentrales Spannungsfeld persistent: die mangelnde Vereinbarkeit von iterativer Wertentwicklung und sequenzieller Genehmigungslogik.
+
+Die Implikation für die Praxis ist weitreichend: Die Weiterentwicklung von TVD im öffentlichen Bau kann nicht allein durch Pilotprojekte und Kulturwandel gelöst werden. Sie erfordert perspektivisch eine Anpassung der administrativen Prozesse – weg von der prüftechnischen Fixierung auf den Planungsstand, hin zu einer genehmigungsrechtlichen Toleranz für Lösungsräume. Ohne diese Evolution des Ordnungsrahmens bleibt TVD ein leistungsfähiger Motor, der in einem zu engen Chassis läuft.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
