Updates from Overleaf

--- a/02_mainmatter/ch6_Fazit.tex
+++ b/02_mainmatter/ch6_Fazit.tex
@@ -4,7 +4,27 @@
 \section{Zusammenfassung der Ergebnisse}
 \label{sec:summary}
 
+Ziel dieser Arbeit war es, die Übertragbarkeit des Target Value Design (TVD) auf die deutsche Baupraxis systematisch zu untersuchen und die dabei auftretenden Hemmnisse nicht isoliert, sondern im Zusammenspiel von Methodik, Vertragslogik und Ordnungsrahmen zu analysieren. Auf Basis eines idealtypischen Phasenmodells (Phase 0–3) wurden die identifizierten Herausforderungen in drei zentrale Dilemmata gebündelt.
+
+Die Analyse zeigt, dass TVD als methodischer Ansatz grundsätzlich mit der deutschen Baupraxis kompatibel ist, seine Wirksamkeit jedoch stark von den institutionellen Rahmenbedingungen abhängt. Die wesentlichen Hemmnisse liegen dabei nicht in der fehlenden Leistungsfähigkeit der Methode selbst, sondern in strukturellen Inkongruenzen zwischen der iterativen, wertorientierten Logik von TVD und den linear organisierten Systemen des öffentlichen Bauens.
+
+Im Beschaffungs-Dilemma wurde deutlich, dass die frühe Integration aller Schlüsselakteure – eine Kernvoraussetzung von TVD – im öffentlichen Sektor nur eingeschränkt realisierbar ist. Zwar existieren vergaberechtliche Instrumente zur kompetenzbasierten Auswahl, deren Anwendung ist jedoch mit hohen Transaktionskosten verbunden und daher auf Großprojekte beschränkt. Vereinfachte Modelle reduzieren zwar den Aufwand, schwächen jedoch häufig den methodischen Kern von TVD.
+
+Das Wert-Dilemma zeigt, dass im öffentlichen Hochbau eine strukturelle Asymmetrie zwischen Kosten- und Wertsteuerung besteht. Während Zielkosten früh festgelegt und institutionell abgesichert werden, bleibt der angestrebte Projektwert oft abstrakt und methodisch unterdefiniert. In Abwesenheit eines ökonomischen ROI und bei getrennter Budgetverantwortung für Investition und Betrieb tendiert TVD dazu, auf die Minimierung von Erstkosten verengt zu werden, wodurch qualitative und lebenszyklusbezogene Ziele an Steuerungswirkung verlieren.
+
+Im Struktur-Dilemma schließlich wurde herausgearbeitet, dass selbst kooperative Vertragsmodelle zentrale Barrieren nicht vollständig auflösen können. Die regulatorisch verankerte Trennung von Planung, Genehmigung und Ausführung steht im Widerspruch zur iterativen Logik von TVD. Insbesondere die begrenzte Möglichkeit zur Parallelisierung von Planen und Bauen sowie der faktische Zwang zu frühen Festlegungen schränken den methodischen Handlungsspielraum ein. Diese Grenzen liegen außerhalb der vertraglichen Gestaltungsfreiheit und sind im öffentlichen Genehmigungs- und Haushaltsrecht begründet.
+
+Zusammenfassend lässt sich die eingangs formulierte Forschungsfrage wie folgt beantworten: Die Integration von Target Value Design in die deutsche öffentliche Projektabwicklung ist grundsätzlich möglich und fachlich sinnvoll, sie erfordert jedoch einen hybriden Ansatz. Unter den bestehenden rechtlichen Rahmenbedingungen (VOB, HOAI, Haushaltsrecht) kann TVD seine volle transformative Wirkung nicht entfalten, sondern muss als methodisches \enquote{Overlay} verstanden werden, das über bestehende Strukturen gelegt wird. Dieser Ansatz ermöglicht eine verbesserte Kosten- und Wertsteuerung, stößt jedoch dort an systemische Grenzen, wo gesetzliche Vorgaben eine lineare Planung und frühzeitige Fixierung erzwingen, die mit der iterativen Logik von TVD nur eingeschränkt vereinbar sind.
+
 \section{Weiterer Forschungsbedarf}
 \label{sec:further research}
 
-- Infrastrukturbau
+Die Ergebnisse dieser Arbeit zeigen, dass die Grenzen der Anwendung von Target Value Design in Deutschland weniger in der Methodik selbst als in ihrem institutionellen Umfeld liegen. Daraus ergeben sich mehrere Ansatzpunkte für weiterführende Forschung, die über den Rahmen dieser Arbeit hinausgehen.
+
+Es besteht Forschungsbedarf in der Weiterentwicklung der wertbasierten Steuerung von Bauprojekten. Insbesondere die Operationalisierung von nicht-monetärem Wert, etwa in Form von Nutzwertkennzahlen oder lebenszyklusbezogenen Zielgrößen, erfordert eine stärkere methodische Fundierung und empirische Validierung. Zukünftige Arbeiten könnten untersuchen, wie solche Wertgrößen systematisch in TVD-Prozesse integriert und gegenüber Kosten gleichrangig gesteuert werden können.
+
+Weiterhin zeigt die Analyse, dass selbst integrierte Vertragsmodelle wie die Integrierte Projektabwicklung (IPA) an externe Grenzen des Genehmigungs- und Haushaltsrechts stoßen. Hier ergibt sich Forschungsbedarf an der Schnittstelle zwischen Projektmethodik und Ordnungsrahmen. Insbesondere die Frage, wie iterative Planungsprozesse genehmigungsrechtlich besser abgebildet werden können, ohne die Rechtssicherheit zu gefährden, stellt eine zentrale Fragestellung dar.
+
+Zudem erscheint eine stärkere Differenzierung nach Projektarten sinnvoll. Die bestehende TVD-Literatur und -Praxis ist stark auf den Hochbau fokussiert, während Infrastrukturprojekte bislang nur randständig betrachtet werden. Wie bereits von Ballard angedeutet, unterscheiden sich insbesondere lineare Infrastrukturvorhaben mit sequenziellen Baustellenlogiken grundlegend von Gebäudeprojekten. Zukünftige Forschung sollte daher untersuchen, inwiefern TVD-Prinzipien für den Infrastrukturbau angepasst oder weiterentwickelt werden müssen, um deren spezifische Prozess- und Wertlogiken adäquat abzubilden.\autocite[vgl. S. 186]{ballard_target_2025}
+
+Zuletzt wäre eine empirische Evaluation laufender TVD- und IPA-Projekte im deutschen Kontext sinnvoll, um die in dieser Arbeit überwiegend analytisch hergeleiteten Spannungsfelder anhand realer Projekterfahrungen zu validieren oder zu relativieren. Insbesondere das Zusammenspiel von iterativer Planung, Genehmigungspraxis und Kostenstabilität bietet hierfür ein relevantes Untersuchungsfeld.
