Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -1,4 +1,4 @@
-\chapter{Methodik}
+\chapter{Forschungsdesign und methodisches Vorgehen}
 \label{ch:methodik}
 
 % Ziel: Das Vorgehen der Arbeit transparent und wissenschaftlich nachvollziehbar darlegen.
