--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -1,4 +1,4 @@
-\chapter{Analyse und Modellierung}
+\chapter{Prozesslogik und Phasen des Target Value Design}
 \label{ch:analyse}
 \section{Das Phasenmodell}
 \label{sec:4.1}
@@ -85,6 +85,16 @@ Es ist hervorzuheben, dass eine moderate Lücke (Szenario B) im TVD nicht als Pl
 Zudem bildet dieses \enquote{Gap} die ökonomische Basis für das in Phase 1 und 2 folgende Inzentivierungsmodell (\textit{Pain/Gain-Share}). Nur wenn eine Lücke existiert, die durch Optimierung geschlossen und unterboten werden kann, entsteht der finanzielle Spielraum (\enquote{Pot}), aus dem spätere Boni für das Planungsteam ausgeschüttet werden können.
 
 Erst wenn diese prinzipielle Machbarkeit bestätigt ist, wird das Projekt freigegeben und die Rekrutierung des integrierten Teams eingeleitet.
+
+\begin{figure}[htbp]
+    \centering
+     \fcolorbox{gray!50}{white}{%
+    \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{}%
+    }
+    
+    \caption[Phase 0: Projektdefinition]{Phase 0: Projektdefinition (Quelle: Eigene Darstellung).}
+    \label{fig:Phase o}
+\end{figure}
 
 \subsection{Implementierungshürden in der Projektinitiierung}
 \label{sec:4.2.4}
